# k0emu

./: .gitignore  .travis.yml  CHANGES.md  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  processor.py  pyproject.toml  run.py  setup.py  test_processor.py  tox.ini
.github/workflows/: main.yml
docs/: devices.txt  done.txt  hardware.txt  notes.txt  software23.txt  todo-software23.txt  todo.txt  untested.txt  verify.txt
docs/testprogs/cmp/: generate.py
docs/testprogs/debugger/firmware/: Makefile  debugger.asm
docs/testprogs/debugger/host/: debugger.py  demo.py  test_cmp.py  test_cmp.txt  test_dec.py  test_inc.py  test_psw.py  test_sp.py  test_sp.txt
docs/testprogs/echo/: Makefile  echo.asm
docs/testprogs/hello/: Makefile  hello.asm
k0emu/: bus.py  debug.py  debugger.py  devices.py  i2c.py  mfsw.py  processor.py  run.py  spi.py  system.py
k0emu/debugger/firmware/: Makefile  debugger.asm
k0emu/debugger/testprogs/: diff.py  run.py
k0emu/debugger/testprogs/fixtures/: _test_adjba.py  _test_adjbs.py  _test_cmp.py  test_add.py  test_addc.py  test_addw.py  test_addw.py.disabled  test_adjba.py  test_adjbs.py  test_and.py  test_cmp.py  test_dec.py  test_decw.py  test_divuw.py  test_divuw.py.disabled  test_inc.py  test_incw.py  test_mulu.py  test_or.py  test_psw.py  test_ram.py  test_regs.py  test_rol.py  (+9 more)
k0emu/devices/: base.py  devices.py
k0emu/tests/: test_bus.py  test_devices.py  test_i2c.py  test_mfsw.py  test_processor.py  test_processor_cycles.py  test_processor_exhaustive.py  test_processor_interrupts.py  test_run.py  test_spi.py
(+22 files in other folders)
